# lite-edge-cluster-scheduler

./: .gitignore  CMakeLists.txt  README.md  download_deps.sh
config_files/: agent_services.json
load_simulate/: .gitignore  README.md  controller.py  main.py  monitor.py  network_monitor.py  recorder.py  satellite_net_pb2.py  satellite_net_pb2_grpc.py  test_monitor.py  workloads.py  yolo_workload.py
load_simulate/yolov5-ascend/: ENV_SETUP.md  IMPROVEMENTS.md  QUICK_START.md  USAGE.md  detect_yolov5_ascend.py  simulate_image_sender.py  test.py
predictor/load_simulator/: background_loads.py  config.py  event_scheduler.py  logger.py  main.py  monitor.py  running_state.py  scheduler.py  task_handlers.py  task_processor.py  task_queue.py  yolo_runner.py
predictor/load_simulator/load_config/: cpu_only.json  geo_satellite.json  io_only.json  leo_satellite.json  meo_satellite.json  net_only.json  single_cpu.json  tasks_only.json  uav.json  ugv.json
predictor/load_simulator/udp_server/: server.py
predictor/load_simulator/yolo/: acl_net.py  constant.py  detect_yolov5_ascend.py
script/: download_deps.ps1
src/core/node_manager/: CMakeLists.txt  NodeManager.cpp  NodeManager.h  static_info.h
src/core/req_manager/: CMakeLists.txt  ReqManager.cpp  ReqManager.h
src/core/req_manager/dispatcher/: Dispatcher.cpp  Dispatcher.h
src/core/req_manager/result_sender/: ResultSender.cpp  ResultSender.h
src/core/req_manager/scheduler/: Scheduler.cpp  Scheduler.h
src/core/req_manager/scheduler/engine/: SchedulerEngine.cpp  SchedulerEngine.h
src/core/req_manager/scheduler/strategy/: LoadBasedStrategy.cpp  LoadBasedStrategy.h  RoundRobinStrategy.cpp  RoundRobinStrategy.h  ScheduleStrategy.h
src/domain/config/: config.h
src/domain/enums/: ScheduleStrategy.h  TaskType.cpp  TaskType.h
src/domain/node/: CMakeLists.txt  device.cpp  device.h
src/domain/req/: ClientRequest.h  ResultItem.h  SubRequest.h
src/entry/: CMakeLists.txt  main.cpp
src/entry/agent/: CMakeLists.txt  MachineInfoCollectorBase.cpp  MachineInfoCollectorBase.h  main.cpp
src/entry/agent/arch/atlas310/: MachineInfoCollector.cpp  dcmi_interface_api.h
src/entry/grpc/: GrpcServer.cpp  GrpcServer.h
src/entry/http/: HttpServer.cpp  HttpServer.h
src/entry/platform/: Platform.cpp  Platform.h
src/infra/db/: req_repository.cpp  req_repository.h  sqlite_db.cpp  sqlite_db.h
src/infra/net/: CMakeLists.txt  DockerClient.cpp  http_client.cpp  http_client.h
src/infra/storage/: file_store.cpp  file_store.h
src/modules/client/: req_send.py  rst_recv.py  send_pic.py
src/modules/slave/: recv_server.py  rst_send.py
src/services/: CMakeLists.txt
src/services/node_service/: NodeService.cpp  NodeService.h
src/services/req_ingress/: ReqIngress.cpp  ReqIngress.h
src/services/req_query/: ReqQuery.cpp  ReqQuery.h
src/services/result_ingress/: ResultIngress.cpp  ResultIngress.h
src/utils/time/: TimeRecorder.h
tests/docker_client/: CMakeLists.txt
tests/scheduler/: CMakeLists.txt  scheduler_test.cpp
